# CookaReq

./: .gitignore  AGENTS.md  LICENSE  NOTICE  PROGRAM_REQUIREMENTS.md  Plan.md  README.md  build.py  build_windows.bat  compile_translations.py  pyproject.toml  pytest.ini  requirements-build.txt  requirements.txt
app/: __init__.py  __main__.py  application.py  cli.py  columns.py  config.py  confirm.py  i18n.py  log.py  main.py  runtime_dependencies.py  settings.py  telemetry.py  version.py
docs/: AGENT_TIMELINE_STABILIZATION_PLAN.md  ARCHITECTURE.md  ASSOCIATED_ARTIFACTS_OPTIONS.md  FORMATTED_REQUIREMENTS_OPTIONS.md  TECH_DEBT_AUDIT.md  TRACEABILITY_DUAL_VIEW_PLAN.md  TRACE_INDEX_GUI_WALKTHROUGH.md  TRACE_INDEX_IMPLEMENTATION_PLAN.md  agent_chat_order_plan.md  agent_chat_refactor_plan.md  agent_history_refactor_plan.md  chat_history_migration.md
gitlab_migrate/: __init__.py  diagnostics.py
requirements/: 0a80256f77f9.json  36559a7feeab.json  37c4d0e8e5e3.json  4c5a3e182a86.json  5da37690dc6c.json  CR-001.json  CR-002.json  CR-003.json  CR-004.json  CR-005.json  CR-006.json  CR-007.json  CR-008.json  CR-009.json  CR-010.json  CR-011.json  CR-012.json  CR-013.json  CR-014.json  c37e32be2bef.json  ce148b22c85e.json
tests/: README.md  conftest.py  env_utils.py  llm_utils.py  mcp_utils.py  suite_utils.py  test_agent_log_diagnostics.py  test_agent_log_helpers.py  test_app_icon.py  test_cli.py  test_command_dialog.py  test_config_manager.py  test_config_manager_proxies.py  test_confirm.py  test_derived_requirements.py  test_editor_panel.py  test_editor_panel_gui.py  test_gui.py  test_hashing.py  test_health_endpoint.py  test_i18n.py  test_i18n_escape.py  test_labels.py  test_labels_dialog.py  test_labels_sync.py  test_language_switch.py  test_link_column_width.py  test_link_titles.py  test_list_panel.py  test_list_panel_gui.py  test_main.py  (+35 more)
(+518 files in other folders)
