[project]
name = "cookareq"
version = "0.1.0"
authors = [{ name = "Maksim Lashkevich & Codex" }]
license = { file = "LICENSE" }
dependencies = [
    "wxPython",
    "jsonschema",
    "fastapi",
    "uvicorn",
    "mcp",
    "openai",
]

[project.optional-dependencies]
# Tests and linters are temporarily disabled during a major refactor
dev = ["polib"]

# Linter configurations temporarily disabled during a major refactor

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
