[project]
name = "cookareq"
version = "0.1.0"
authors = [{ name = "Maksim Lashkevich & Codex" }]
license = { file = "LICENSE" }
dependencies = [
    "wxPython",
    "jsonschema",
    "fastapi",
    "uvicorn",
    "mcp",
    "openai",
    "markdown",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xvfb",
    "ruff",
    "polib",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["dist"]
